Fix potential circural import problem

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,7 +2,7 @@
 http-socket = :5000
 master = true
 die-on-term = true
-module = app:app
+module = run:app
 uid = www-data
 gid = www-data
 processes = 1
