Fix sqlalchemy issue when doploying on Heroku

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,8 @@ secret_key = rykosystem
 gen_dir = gen
 
 [Database]
-type = postgresql+psycopg2
+local_prefix = postgresql://
+remote_prefix = postgres://
 user = rykosystem
 password = rykosystem_password
 url = ${Database:user}:${Database:password}@db:5432/${Database:user}
