--- a/config.ini
+++ b/config.ini
@@ -9,3 +9,10 @@ remote_prefix = postgres://
 user = rykosystem
 password = rykosystem_password
 url = ${Database:user}:${Database:password}@db:5432/${Database:user}
+
+[Company]
+name = "RYKO s.c. Danuta Koszucka, Ryszard Koszucki"
+nip = "929-10-27-094"
+regon = "97037369"
+address = "ul. Zawiszy Czarnego 1B, Zielona Góra 65-387"
+adress_for_contract = "w Zielonej Górze przy ul. Zawiszy Czarnego 1B"
