Setup DocumentGenerator for filling docx files, generate pdf with libreoffice, prepare api for uploading files to google drive

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,6 @@
 [Common]
-debug_on = True
 secret_key = rykosystem
-gen_dir = gen
+main_directory = /app
 
 [Database]
 local_prefix = postgresql://
@@ -16,3 +15,13 @@ nip = "929-10-27-094"
 regon = "97037369"
 address = "ul. Zawiszy Czarnego 1B, Zielona Góra 65-387"
 adress_for_contract = "w Zielonej Górze przy ul. Zawiszy Czarnego 1B"
+
+[DocTemplates]
+google_drive_id = 1Sc6UbsrzpAfTq2pq9Ieu7VSn1CGxmGrX
+output_dir = gen
+directory = mergefield_docs_templates
+register = ${Common:main_directory}/${DocTemplates:directory}/rejestr.docx
+
+[DocNames]
+main_dir = Program_
+register = Rejestr_{}.docx
