--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,3 +7,5 @@ services:
     environment:
       PORT: 5000
       PYTHONUNBUFFERED: 1
+      DEBUG_MODE: ${DEBUG_MODE}
+      GOOGLE_DRIVE_AUTH: ${GOOGLE_DRIVE_AUTH}
