--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ Flask-SQLAlchemy==2.5.1
 psycopg2==2.9.3
 Flask-Cors==3.0.10
 docx-mailmerge==0.5.0
+google-auth==2.11.0
+google-api-python-client==2.58.0
 uwsgi
