Create directory tree and save google ids to database

--- a/config.ini
+++ b/config.ini
@@ -9,12 +9,21 @@ user = rykosystem
 password = rykosystem_password
 url = ${Database:user}:${Database:password}@db:5432/${Database:user}
 
-[DocTemplates]
+[GoogleDriveConfig]
 google_drive_id = 1Sc6UbsrzpAfTq2pq9Ieu7VSn1CGxmGrX
-output_dir = gen
+
+[DocTemplates]
 directory = mergefield_docs_templates
 register = ${Common:main_directory}/${DocTemplates:directory}/rejestr.docx
 
 [DocNames]
-main_dir = Program_
 register = Rejestr_{}.docx
+
+[Directories]
+main_dir_program_part = DEV_PROGRAM
+main_sem_dir_part = SEMESTR
+school =  SZKOLY
+annex = ANKESY
+contract = UMOWY
+application = EWIDENCJE
+record = WZ
