Change dir name in google drive for production env

--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,7 @@ register = ${Common:main_directory}/${DocTemplates:directory}/rejestr.docx
 register = Rejestr_{}.docx
 
 [Directories]
-main_dir_program_part = DEV_PROGRAM
+main_dir_program_part = PROGRAM
 main_sem_dir_part = SEMESTR
 school =  SZKOLY
 annex = ANKESY
