New routes for contract generation, update and getting

--- a/config.ini
+++ b/config.ini
@@ -13,8 +13,10 @@ url = ${Database:user}:${Database:password}@db:5432/${Database:user}
 google_drive_id = 1Sc6UbsrzpAfTq2pq9Ieu7VSn1CGxmGrX
 
 [DocTemplates]
-directory = mergefield_docs_templates
-register = ${Common:main_directory}/${DocTemplates:directory}/rejestr.docx
+directory = ${Common:main_directory}/mergefield_docs_templates
+register = ${DocTemplates:directory}/rejestr.docx
+contract = Zalacznik_VIII_Umowa.docx
+contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 
 [DocNames]
 register = Rejestr_{}.docx
