--- a/config.ini
+++ b/config.ini
@@ -15,17 +15,20 @@ google_drive_id = 1Sc6UbsrzpAfTq2pq9Ieu7VSn1CGxmGrX
 [DocTemplates]
 directory = ${Common:main_directory}/mergefield_docs_templates
 register = ${DocTemplates:directory}/rejestr.docx
+annex = ${DocTemplates:directory}/aneks.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 
 [DocNames]
 register = Rejestr_{}.docx
+annex = {}_Aneks_{}_{}_{}.docx
+contract = {}_Umowa_{}_{}.docx
 
 [Directories]
 main_dir_program_part = DEV_PROGRAM
 main_sem_dir_part = SEMESTR
 school =  SZKOLY
-annex = ANKESY
+annex = ANEKSY
 contract = UMOWY
 application = EWIDENCJE
 record = WZ
