Return empty array if nothing found

--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,7 @@ annex = {}_Aneks_{}_{}_{}.docx
 contract = {}_Umowa_{}_{}.docx
 
 [Directories]
-main_dir_program_part = PROGRAM
+main_dir_program_part = DEV_PROGRAM
 main_sem_dir_part = SEMESTR
 school =  SZKOLY
 annex = ANEKSY
