Setup redis and worker, for queueing task, create separate task for creating deliveries. Create new route for getting status of the task.

--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,9 @@ user = rykosystem
 password = rykosystem_password
 url = ${Database:user}:${Database:password}@db:5432/${Database:user}
 
+[Redis]
+url = redis://redis:6379/0
+
 [GoogleDriveConfig]
 google_drive_id = 1Sc6UbsrzpAfTq2pq9Ieu7VSn1CGxmGrX
 
