--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,28 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+
   web:
+    build: .
+    image: rykosystem
+    container_name: rykosystem
     depends_on:
       - db
-    build: .
-    container_name: rykosystem
+      - redis
     ports:
     - "5000:5000"
+    volumes:
+      - .:/app
+
+  worker:
+    image: rykosystem
+    command: python worker.py
+    depends_on:
+      - redis
+    volumes:
+      - .:/app
