--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '2'
 services:
+  test_db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: rykosystem_test
+      POSTGRES_PASSWORD: rykosystem_password_test
+    ports:
+      - "5433:5432"
+
   db:
     image: postgres
     restart: always
