Issue #1: create progress tracking, remove already uploaded documents if any

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -25,7 +25,7 @@ record = ${DocTemplates:directory}/wz.docx
 delivery = ${DocTemplates:directory}/rozwozka.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
-test = test_file.docx
+test = test_file{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
