--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     docker:
       - image: cimg/python:3.9.13
         environment:
-          DEBUG_MODE: ${DEBUG_MODE}
+          DEBUG_MODE: 1
           GOOGLE_DRIVE_AUTH: ${GOOGLE_DRIVE_AUTH}
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
