--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,22 @@ jobs:
         environment:
           DEBUG_MODE: 1
           GOOGLE_DRIVE_AUTH: ${GOOGLE_DRIVE_AUTH}
-      - image: cimg/postgres:15.1.0 
+      - image: cimg/postgres:15.1.0
+        environment:
+          DATABASE_URL: "postgres://rykosystem_test@localhost:5433/rykosystem_test"
+        auth:
+          username: rykosystem_test
+          password: rykosystem_password_test
       - image:  cimg/redis:6.2.6
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
+      - run: whoami
+      - run: | 
+          psql \ 
+          -d $DATABASE_URL 
+          -c "\dt"
       - python/install-packages:
           pkg-manager: pip
       - run:
