Setup proper annex document name and update annex template. Issue #29

--- a/config.ini
+++ b/config.ini
@@ -23,10 +23,11 @@ record = ${DocTemplates:directory}/wz.docx
 delivery = ${DocTemplates:directory}/rozwozka.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
+validity_annex_end_info = i obowiązuje do dnia {} r.
 
 [DocNames]
 register = Rejestr_{}.docx
-annex = {}_Aneks_{}_{}_{}.docx
+annex = {}_Aneks_{}_{}_doUmowy_{}.docx
 contract = {}_Umowa_{}_{}.docx
 record = {}_WZ_{}_{}.docx
 record_all = Data_{}_Kierowca_{}_WZ.docx
