--- a/tests/config.ini
+++ b/tests/config.ini
@@ -26,6 +26,7 @@ delivery = ${DocTemplates:directory}/rozwozka.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 test = test_file{}.docx
+validity_annex_end_info = i obowiązuje do dnia {} r.
 
 [DocNames]
 register = Rejestr_{}.docx
