--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
           DEBUG_MODE: 1
           GOOGLE_DRIVE_AUTH: ${GOOGLE_DRIVE_AUTH}
       - image: cimg/postgres:15.1
-        # environment:
-        #   DATABASE_URL: "postgres://rykosystem_test@localhost:5433/rykosystem_test"
+         environment:
+           DATABASE_URL: "postgres://rykosystem_test@localhost:5433/rykosystem_test"
       - image:  cimg/redis:6.2.6
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
