--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
           GOOGLE_DRIVE_AUTH: ${GOOGLE_DRIVE_AUTH}
       - image: cimg/postgres:15.1
         environment:
-          DATABASE_URL: "postgres://rykosystem_test@localhost:5433/rykosystem_test"
+          POSTGRES_USER: rykosystem_test
+          POSTGRES_DB: rykosystem_test
+          DATABASE_URL: postgres://${POSTGRES_USER}@localhost:5433/${POSTGRES_DB}
       - image:  cimg/redis:6.2.6
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
