--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
         environment:
           POSTGRES_USER: rykosystem_test
           POSTGRES_DB: rykosystem_test
-          DATABASE_URL: "postgres://rykosystem_test@localhost:5433/rykosystem_test"
+          # DATABASE_URL: "postgres://rykosystem_test@localhost:5433/rykosystem_test"
       - image:  cimg/redis:6.2.6
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
