--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,6 @@ jobs:
           POSTGRES_USER: rykosystem_test
           POSTGRES_DB: rykosystem_test
           POSTGRES_PASSWORD: rykosystem_password_test
-          DATABASE_URL: "postgres://rykosystem_test@localhost:5432/rykosystem_test"
       # - image:  cimg/redis:6.2.6
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
@@ -28,8 +27,11 @@ jobs:
       - checkout
       - run: 
           name: Checkout postesql connection, display tables 
+          environment: 
+            DATABASE_URL: "postgres://rykosystem_test@localhost:5432/rykosystem_test"
           # command: | echo $DATABASE_URL | psql -d postgres://rykosystem_test@localhost:5432/rykosystem_test -c "\dt"
-          command: echo DATABASE_URL
+          command: echo $DATABASE_URL
+
       # - python/install-packages:
       #     pkg-manager: pip
       # - run:
