--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,8 @@ jobs:
         environment:
           POSTGRES_USER: rykosystem_test
           POSTGRES_DB: rykosystem_test
-          POSTGRES_PASSWORD: rykosystem_password_test
+          POSTGRES_PASSWORD: ''
+          POSTGRES_HOST: localhost
       # - image:  cimg/redis:6.2.6
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
@@ -29,7 +30,7 @@ jobs:
           name: Checkout postesql connection, display tables 
           environment: 
             DATABASE_URL: "postgres://rykosystem_test@localhost:5432/rykosystem_test"
-          command: echo $DATABASE_URL && psql -d postgres://rykosystem_test@localhost:5432/rykosystem_test -c "\dt"
+          command: echo $DATABASE_URL && psql -d postgres://rykosystem_test@localhost/rykosystem_test -c "\dt"
          
       # - python/install-packages:
       #     pkg-manager: pip
