--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
           name: Checkout postesql connection, display tables 
           environment: 
             DATABASE_URL: postgres://rykosystem_test@localhost/rykosystem_test
-          command: echo $DATABASE_URL && psql -d postgres://rykosystem_test@localhost/rykosystem_test -c "\dt"
+          command: echo $DATABASE_URL && psql -d $DATABASE_URL -c "\dt"
          
       # - python/install-packages:
       #     pkg-manager: pip
