--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
         environment:
           POSTGRES_USER: rykosystem_test
           POSTGRES_DB: rykosystem_test
-          POSTGRES_PASSWORD: ''
+          POSTGRES_PASSWORD: rykosystem_password_test
           POSTGRES_HOST: localhost
-      # - image:  cimg/redis:6.2.6
+      - image:  cimg/redis:6.2.6
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
@@ -29,7 +29,7 @@ jobs:
       - run: 
           name: Checkout postesql connection, display tables 
           environment: 
-            DATABASE_URL: postgres://rykosystem_test@localhost/rykosystem_test
+            DATABASE_URL: postgres://rykosystem_test:rykosystem_password_test@localhost/rykosystem_test
           command: psql -d ${DATABASE_URL} -c "\dt"
          
       # - python/install-packages:
