--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
         environment:
           POSTGRES_USER: rykosystem_test
           POSTGRES_DB: rykosystem_test
-          POSTGRES_PASSWORD: rykosystem_password_test
+          POSTGRES_PASSWORD: ''
           POSTGRES_HOST: localhost
       - image:  cimg/redis:6.2.6
     steps:
@@ -21,9 +21,9 @@ jobs:
       - run: 
           name: Checkout postesql connection, display tables 
           environment: 
-            DATABASE_URL: postgres://rykosystem_test:rykosystem_password_test@localhost/rykosystem_test
+            DATABASE_URL: postgres://rykosystem_test@localhost/rykosystem_test
           command: psql -d ${DATABASE_URL} -c "\dt"
-                   
+
       - python/install-packages:
           pkg-manager: pip
       - run:
