--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: Run unit tests
           command: pytest --junitxml=test-results/junit.xml --html=test-results/pytest_report.html --self-contained-html
       - run:
-          name: Get logs if failed
+          name: Upload Failed Logs
           command: find . -name ../rykosystem.log && cat ../rykosystem.log | head
           when: on_fail
       - store_test_results:
