--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,19 @@ jobs:
       - image:  cimg/redis:6.2.6
     steps:
       - checkout
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+      - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+          name: Wait for redis
+          command: dockerize -wait tcp://localhost:6379 -timeout 1m
       - run: 
-          name: Checkout postesql connection, display tables 
+          name: Confirm database connection is working
           environment: 
             DATABASE_URL: postgres://rykosystem_test@localhost/rykosystem_test
           command: psql -d ${DATABASE_URL} -c "\dt"
