--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 [Common]
-secret_key = rykosystem
+secret_key = programforschools
 main_directory = /app
 
 [Database]
 local_prefix = postgresql://
 remote_prefix = postgres://
-user = rykosystem
-password = rykosystem_password
+user = programforschools
+password = programforschools_password
 url = ${Database:user}:${Database:password}@db:5432/${Database:user}
 
 [Redis]
