--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,14 +1,14 @@
 [Common]
-secret_key = rykosystem
+secret_key = programforschools
 main_directory = /app
 
 [Database]
 local_prefix = postgresql://
 remote_prefix = postgres://
-user = rykosystem_test
-password = rykosystem_password_test
+user = programforschools_test
+password = programforschools_password_test
 port = 5432
-host = 127.0.0.1
+host = test_db
 url = ${Database:user}:${Database:password}@${Database:host}:${Database:port}/${Database:user}
 
 [Redis]
