--- a/tests/config.ini
+++ b/tests/config.ini
@@ -8,11 +8,11 @@ remote_prefix = postgres://
 user = programforschools_test
 password = programforschools_password_test
 port = 5432
-host = test_db
+host = localhost
 url = ${Database:user}:${Database:password}@${Database:host}:${Database:port}/${Database:user}
 
 [Redis]
-url = redis://redis:6379/0
+url = redis://localhost:6379/0
 
 [GoogleDriveConfig]
 google_drive_id = 1D8C3N25dD1nhUx61FiC7blGIBUY_-plg
