Squashed commit of the following:
commit b64086e141f1041c23df4ab0d90f0a7cc2b19998
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Thu Mar 9 22:38:35 2023 +0100

    Changes

commit 34f369b3ceba46ce2759b0a203bb9db8aa1fed94
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Thu Mar 9 20:52:50 2023 +0100

    change

commit 25e2e75df37b982713cf2f1264cd2b30a6ccfeae
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Thu Mar 9 20:17:46 2023 +0100

    Changes

commit 16e2133edf471acf5a95d9a727466e07fbd3fc67
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Thu Mar 9 16:02:20 2023 +0100

    Extract host infomration in tests

commit ac1981e2436785b7766847377587e74d483cf156
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Thu Mar 9 14:29:57 2023 +0100

    Fixes in test and setting up CI/CD

commit 6500fa583e6ea109afcb3292f21214101707fa12
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Mon Mar 6 23:09:10 2023 +0100

    Renaming project

commit 55105b6c22c0d6a86dc62e34a88290d8c726cefd
Author: Maria <koszucka.maria@gmail.com>
Date:   Mon Mar 6 15:18:09 2023 +0100

    Updated config.yml

commit 128a45fc92e2580a16191f0ad899e15b9d991099
Author: Maria <koszucka.maria@gmail.com>
Date:   Mon Mar 6 15:06:48 2023 +0100

    Updated config.yml

commit 6bc38ec7995a058ccb424b67f9b6bd7ef86b29f7
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Tue Feb 28 21:12:06 2023 +0100

    changes

commit 71ea2153f06a35ce87d2934fba559750168627db
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Tue Feb 28 21:07:35 2023 +0100

    changes

commit a2fd52a85738d258e79948cb7060a59aa064b537
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Tue Feb 28 20:35:07 2023 +0100

    changes

commit 78037b698d3f56765393234aabe83d71cc6b677c
Author: Maria Koszucka <koszucka.maria@gmail.com>
Date:   Tue Feb 28 20:33:41 2023 +0100

    changes

commit 965f040941c0ccb007eff9397bb42ab79c890b11
Author: Maria Koszucka <koszucka.maria@gmail.com>

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,18 +1,18 @@
 [Common]
-secret_key = rykosystem
+secret_key = programforschools
 main_directory = /app
 
 [Database]
 local_prefix = postgresql://
 remote_prefix = postgres://
-user = rykosystem_test
-password = rykosystem_password_test
-port = 5433
-host = 127.0.0.1
+user = programforschools_test
+password = programforschools_password_test
+port = 5432
+host = localhost
 url = ${Database:user}:${Database:password}@${Database:host}:${Database:port}/${Database:user}
 
 [Redis]
-url = redis://redis:6379/0
+url = redis://localhost:6379/0
 
 [GoogleDriveConfig]
 google_drive_id = 1D8C3N25dD1nhUx61FiC7blGIBUY_-plg
