--- a/config.ini
+++ b/config.ini
@@ -24,6 +24,7 @@ delivery = ${DocTemplates:directory}/rozwozka.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 validity_annex_end_info = i obowiązuje do dnia {} r.
+records_summary = Zalacznik_VA_-_Ewidencja_dostaw{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
@@ -32,12 +33,13 @@ contract = {}_Umowa_{}_{}.docx
 record = {}_WZ_{}_{}.docx
 record_all = Data_{}_Kierowca_{}_WZ.docx
 delivery = Data_{}_Kierowca_{}_rozpiska.docx
+records_summary = {}_Ewidencja_dostaw.docx
 
 [Directories]
 main_dir_program_part = DEV_PROGRAM
 main_sem_dir_part = SEMESTR
-school =  SZKOLY
 annex = ANEKSY
 contract = UMOWY
-application = EWIDENCJE
+application = WNIOSKI
+applicationForSchool = EWIDENCJE
 record = WZ
