Statement Generator for schools

--- a/config.ini
+++ b/config.ini
@@ -25,6 +25,7 @@ contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 validity_annex_end_info = i obowiązuje do dnia {} r.
 records_summary = Zalacznik_VA_-_Ewidencja_dostaw{}.docx
+records_statements = Zalacznik_V_Oswiadczenie_szkoly{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
@@ -34,6 +35,7 @@ record = {}_WZ_{}_{}.docx
 record_all = Data_{}_Kierowca_{}_WZ.docx
 delivery = Data_{}_Kierowca_{}_rozpiska.docx
 records_summary = {}_Ewidencja_dostaw.docx
+records_statements = {}_Oswiadczenie.docx
 
 [Directories]
 main_dir_program_part = DEV_PROGRAM
