--- a/tests/config.ini
+++ b/tests/config.ini
@@ -18,7 +18,7 @@ url = redis://localhost:6379/0
 google_drive_id = 1D8C3N25dD1nhUx61FiC7blGIBUY_-plg
 
 [DocTemplates]
-directory = helper_files
+directory = ${Common:main_directory}/mergefield_docs_templates
 register = ${DocTemplates:directory}/rejestr.docx
 annex = ${DocTemplates:directory}/aneks.docx
 record = ${DocTemplates:directory}/wz.docx
@@ -27,6 +27,8 @@ contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 test = test_file{}.docx
 validity_annex_end_info = i obowiązuje do dnia {} r.
+records_summary = Zalacznik_VA_Ewidencja_dostaw{}.docx
+records_statements = Zalacznik_V_Oswiadczenie_szkoly{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
@@ -35,12 +37,15 @@ contract = {}_Umowa_{}_{}.docx
 record = {}_WZ_{}_{}.docx
 record_all = Data_{}_Kierowca_{}_WZ.docx
 delivery = Data_{}_Kierowca_{}_rozpiska.docx
+records_summary = {}_Ewidencja_dostaw.docx
+records_statements = {}_Oswiadczenie.docx
 
 [Directories]
 main_dir_program_part = TEST_PROGRAM
 main_sem_dir_part = SEMESTR
-school =  SZKOLY
 annex = ANEKSY
 contract = UMOWY
-application = EWIDENCJE
+application = WNIOSKI
+applicationForSchool = EWIDENCJE
 record = WZ
+
