Generate application documents

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -8,11 +8,11 @@ remote_prefix = postgres://
 user = programforschools_test
 password = programforschools_password_test
 port = 5432
-host = localhost
+host = test_db
 url = ${Database:user}:${Database:password}@${Database:host}:${Database:port}/${Database:user}
 
 [Redis]
-url = redis://localhost:6379/0
+url = redis://redis:6379/0
 
 [GoogleDriveConfig]
 google_drive_id = 1D8C3N25dD1nhUx61FiC7blGIBUY_-plg
@@ -29,6 +29,7 @@ test = test_file{}.docx
 validity_annex_end_info = i obowiązuje do dnia {} r.
 records_summary = Zalacznik_VA_Ewidencja_dostaw{}.docx
 records_statements = Zalacznik_V_Oswiadczenie_szkoly{}.docx
+application = Zalacznik_IV_Wniosek_o_pomoc{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
@@ -39,6 +40,7 @@ record_all = Data_{}_Kierowca_{}_WZ.docx
 delivery = Data_{}_Kierowca_{}_rozpiska.docx
 records_summary = {}_Ewidencja_dostaw.docx
 records_statements = {}_Oswiadczenie.docx
+application = Wniosek_o_pomoc_{}.docx
 
 [Directories]
 main_dir_program_part = TEST_PROGRAM
