--- a/config.ini
+++ b/config.ini
@@ -26,6 +26,7 @@ contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 validity_annex_end_info = i obowiązuje do dnia {} r.
 records_summary = Zalacznik_VA_-_Ewidencja_dostaw{}.docx
 records_statements = Zalacznik_V_Oswiadczenie_szkoly{}.docx
+application = Zalacznik_IV_Wniosek_o_pomoc{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
@@ -36,6 +37,7 @@ record_all = Data_{}_Kierowca_{}_WZ.docx
 delivery = Data_{}_Kierowca_{}_rozpiska.docx
 records_summary = {}_Ewidencja_dostaw.docx
 records_statements = {}_Oswiadczenie.docx
+application = Wniosek_o_pomoc_{}.docx
 
 [Directories]
 main_dir_program_part = DEV_PROGRAM
