Add week summary

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,7 @@ register = ${DocTemplates:directory}/rejestr.docx
 annex = ${DocTemplates:directory}/aneks.docx
 record = ${DocTemplates:directory}/wz.docx
 delivery = ${DocTemplates:directory}/rozwozka.docx
+week_summary = ${DocTemplates:directory}/rozpiska.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 validity_annex_end_info = i obowiązuje do dnia {} r.
@@ -35,6 +36,7 @@ contract = {}_Umowa_{}_{}.docx
 record = {}_WZ_{}_{}.docx
 record_all = Data_{}_Kierowca_{}_WZ.docx
 delivery = Data_{}_Kierowca_{}_rozpiska.docx
+week_summary = Tydzień_{}_rozpiska.docx
 records_summary = {}_Ewidencja_dostaw.docx
 records_statements = {}_Oswiadczenie.docx
 application = Wniosek_o_pomoc_{}.docx
