Update directory from DEV_PROGRAM to PROGRAM

--- a/config.ini
+++ b/config.ini
@@ -42,7 +42,7 @@ records_statements = {}_Oswiadczenie.docx
 application = Wniosek_o_pomoc_{}.docx
 
 [Directories]
-main_dir_program_part = DEV_PROGRAM
+main_dir_program_part = PROGRAM
 main_sem_dir_part = SEMESTR
 annex = ANEKSY
 contract = UMOWY
