Change the summary of records

--- a/config.ini
+++ b/config.ini
@@ -34,8 +34,8 @@ register = Rejestr_{}.docx
 annex = {}_Aneks_{}_{}_doUmowy_{}.docx
 contract = {}_Umowa_{}_{}.docx
 record = {}_WZ_{}_{}.docx
-record_all = Data_{}_Kierowca_{}_WZ.docx
-delivery = Data_{}_Kierowca_{}_rozpiska.docx
+record_all = Data_{}_{}_WZ.docx
+delivery = Data_{}_{}_rozpiska.docx
 week_summary = Tydzień_{}_rozpiska.docx
 records_summary = {}_Ewidencja_dostaw.docx
 records_statements = {}_Oswiadczenie.docx
