Add generating invoice summrize

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,7 @@ register = ${DocTemplates:directory}/rejestr.docx
 annex = ${DocTemplates:directory}/aneks.docx
 record = ${DocTemplates:directory}/wz.docx
 delivery = ${DocTemplates:directory}/rozwozka.docx
+invoice_disposal = ${DocTemplates:directory}/faktury.docx
 week_summary = ${DocTemplates:directory}/rozpiska.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
@@ -40,6 +41,7 @@ week_summary = Tydzień_{}_rozpiska.docx
 records_summary = {}_Ewidencja_dostaw.docx
 records_statements = {}_Oswiadczenie.docx
 application = Wniosek_o_pomoc_{}.docx
+invoice_disposal = Podsumowanie_faktur_dla_Wn_{}.docx
 
 [Directories]
 main_dir_program_part = DEV_PROGRAM
@@ -49,3 +51,4 @@ contract = UMOWY
 application = WNIOSKI
 applicationForSchool = EWIDENCJE
 record = WZ
+invoice_disposal = FAKTURY
