--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask~=2.1.3
 Flask-RESTful==0.3.9
 Flask-JWT-extended==4.4.3
+PyJWT==2.6.0
 Flask-SQLAlchemy==2.5.1
 psycopg2==2.9.3
 Flask-Cors==3.0.10
