--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ redis==4.3.4
 rq==1.11.1
 pytest==7.2.0
 pytest-flask-sqlalchemy==1.1.0
-uwsgi
+uWSGI==2.0.28
 Werkzeug~=2.2.1
 SQLAlchemy~=1.4.39
 aiogoogle==4.5.0
