--- a/tests/config.ini
+++ b/tests/config.ini
@@ -7,12 +7,12 @@ local_prefix = postgresql://
 remote_prefix = postgres://
 user = programforschools_test
 password = programforschools_password_test
-port = 5432
+port = 5433
 host = localhost
 url = ${Database:user}:${Database:password}@${Database:host}:${Database:port}/${Database:user}
 
 [Redis]
-url = redis://localhost:6379/0
+url = redis://redis:6379/0
 
 [GoogleDriveConfig]
 google_drive_id = 1L60b0ELqlhSI25oew2t_69bCak1ef6EX
