Implement register for recrods and endpoint for it

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -20,9 +20,11 @@ google_drive_id = 1L60b0ELqlhSI25oew2t_69bCak1ef6EX
 [DocTemplates]
 directory = ${Common:main_directory}/mergefield_docs_templates
 register = ${DocTemplates:directory}/rejestr.docx
+record_register = ${DocTemplates:directory}/wz_rejestr.docx
 annex = ${DocTemplates:directory}/aneks.docx
 record = ${DocTemplates:directory}/wz.docx
 delivery = ${DocTemplates:directory}/rozwozka.docx
+invoice_disposal = ${DocTemplates:directory}/faktury.docx
 contract = Zalacznik_VIII_Umowa.docx
 contract_empty = Zalacznik_VIII_Umowa_Pusta.docx
 test = test_file{}.docx
@@ -33,6 +35,7 @@ application = Zalacznik_IV_Wniosek_o_pomoc{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
+record_register = Rejest_wz_{}.docx
 annex = {}_Aneks_{}_{}_{}.docx
 contract = {}_Umowa_{}_{}.docx
 record = {}_WZ_{}_{}.docx
@@ -41,6 +44,7 @@ delivery = Data_{}_Kierowca_{}_rozpiska.docx
 records_summary = {}_Ewidencja_dostaw.docx
 records_statements = {}_Oswiadczenie.docx
 application = Wniosek_o_pomoc_{}.docx
+invoice_disposal = Podsumowanie_faktur_dla_Wn_{}.docx
 
 [Directories]
 main_dir_program_part = TEST_PROGRAM
@@ -50,4 +54,5 @@ contract = UMOWY
 application = WNIOSKI
 applicationForSchool = EWIDENCJE
 record = WZ
+invoice_disposal = FAKTURY
 
