--- a/config.ini
+++ b/config.ini
@@ -18,6 +18,7 @@ google_drive_id = 1D8C3N25dD1nhUx61FiC7blGIBUY_-plg
 [DocTemplates]
 directory = ${Common:main_directory}/mergefield_docs_templates
 register = ${DocTemplates:directory}/rejestr.docx
+record_register = ${DocTemplates:directory}/wz_rejestr.docx
 annex = ${DocTemplates:directory}/aneks.docx
 record = ${DocTemplates:directory}/wz.docx
 delivery = ${DocTemplates:directory}/rozwozka.docx
@@ -32,6 +33,7 @@ application = Zalacznik_IV_Wniosek_o_pomoc{}.docx
 
 [DocNames]
 register = Rejestr_{}.docx
+record_register = Rejest_wz_{}.docx
 annex = {}_Aneks_{}_{}_doUmowy_{}.docx
 contract = {}_Umowa_{}_{}.docx
 record = {}_WZ_{}_{}.docx
