Generate suppliers register

--- a/config.ini
+++ b/config.ini
@@ -22,6 +22,7 @@ record_register = ${DocTemplates:directory}/wz_rejestr.docx
 annex = ${DocTemplates:directory}/aneks.docx
 record = ${DocTemplates:directory}/wz.docx
 delivery = ${DocTemplates:directory}/rozwozka.docx
+suppliers_registry = ${DocTemplates:directory}/dostawcy_rejestr.docx
 invoice_disposal = ${DocTemplates:directory}/faktury.docx
 week_summary = ${DocTemplates:directory}/rozpiska.docx
 contract = Zalacznik_VIII_Umowa.docx
@@ -44,6 +45,7 @@ records_summary = {}_Ewidencja_dostaw.docx
 records_statements = {}_Oswiadczenie.docx
 application = Wniosek_o_pomoc_{}.docx
 invoice_disposal = Podsumowanie_faktur_dla_Wn_{}.docx
+suppliers_registry = Rejestr_dostawcow_{}.docx
 
 [Directories]
 main_dir_program_part = DEV_PROGRAM
@@ -54,3 +56,4 @@ application = WNIOSKI
 applicationForSchool = EWIDENCJE
 record = WZ
 invoice_disposal = FAKTURY
+suppliers_registry = REJESTR_DOSTAWCOW
